[gd_scene load_steps=6 format=2]

[ext_resource path="res://level selection.escn" type="PackedScene" id=1]
[ext_resource path="res://level selection.gd" type="Script" id=2]
[ext_resource path="res://Level.gd" type="Script" id=3]

[sub_resource type="Environment" id=2]
background_mode = 1
background_color = Color( 0.901961, 1, 0.682353, 1 )
ambient_light_color = Color( 0.819608, 1, 0.603922, 1 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.89149, 0.08428, 0.522489 )

[node name="level selection" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Camera" parent="." index="1"]
environment = SubResource( 2 )

[node name="Level001" parent="." index="2"]
script = ExtResource( 3 )
levelNum = 1

[node name="Area" type="Area" parent="Level001" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level001/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level002" parent="." index="3"]
script = ExtResource( 3 )
levelNum = 2

[node name="Area" type="Area" parent="Level002" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level002/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level003" parent="." index="4"]
script = ExtResource( 3 )
levelNum = 3

[node name="Area" type="Area" parent="Level003" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level003/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level004" parent="." index="5"]
script = ExtResource( 3 )
levelNum = 4

[node name="Area" type="Area" parent="Level004" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level004/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level005" parent="." index="6"]
script = ExtResource( 3 )
levelNum = 5

[node name="Area" type="Area" parent="Level005" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level005/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level006" parent="." index="7"]
script = ExtResource( 3 )
levelNum = 6

[node name="Area" type="Area" parent="Level006" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level006/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level007" parent="." index="8"]
script = ExtResource( 3 )
levelNum = 7

[node name="Area" type="Area" parent="Level007" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level007/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level008" parent="." index="9"]
script = ExtResource( 3 )
levelNum = 8

[node name="Area" type="Area" parent="Level008" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level008/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level009" parent="." index="10"]
script = ExtResource( 3 )
levelNum = 9

[node name="Area" type="Area" parent="Level009" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level009/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level010" parent="." index="11"]
script = ExtResource( 3 )
levelNum = 10

[node name="Area" type="Area" parent="Level010" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level010/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level011" parent="." index="12"]
script = ExtResource( 3 )
levelNum = 11

[node name="Area" type="Area" parent="Level011" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level011/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level012" parent="." index="13"]
script = ExtResource( 3 )
levelNum = 12

[node name="Area" type="Area" parent="Level012" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level012/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )

[node name="Level013" parent="." index="14"]
script = ExtResource( 3 )
levelNum = 13

[node name="Area" type="Area" parent="Level013" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Level013/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57554, 0.0112372, -0.33712 )
shape = SubResource( 1 )
[connection signal="click" from="Level001" to="." method="_on_Level_click"]
[connection signal="hover" from="Level001" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level001/Area" to="Level001" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level001/Area" to="Level001" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level001/Area" to="Level001" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level002" to="." method="_on_Level_click"]
[connection signal="hover" from="Level002" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level002/Area" to="Level002" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level002/Area" to="Level002" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level002/Area" to="Level002" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level003" to="." method="_on_Level_click"]
[connection signal="hover" from="Level003" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level003/Area" to="Level003" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level003/Area" to="Level003" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level003/Area" to="Level003" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level004" to="." method="_on_Level_click"]
[connection signal="hover" from="Level004" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level004/Area" to="Level004" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level004/Area" to="Level004" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level004/Area" to="Level004" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level005" to="." method="_on_Level_click"]
[connection signal="hover" from="Level005" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level005/Area" to="Level005" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level005/Area" to="Level005" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level005/Area" to="Level005" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level006" to="." method="_on_Level_click"]
[connection signal="hover" from="Level006" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level006/Area" to="Level006" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level006/Area" to="Level006" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level006/Area" to="Level006" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level007" to="." method="_on_Level_click"]
[connection signal="hover" from="Level007" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level007/Area" to="Level007" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level007/Area" to="Level007" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level007/Area" to="Level007" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level008" to="." method="_on_Level_click"]
[connection signal="hover" from="Level008" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level008/Area" to="Level008" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level008/Area" to="Level008" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level008/Area" to="Level008" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level009" to="." method="_on_Level_click"]
[connection signal="hover" from="Level009" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level009/Area" to="Level009" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level009/Area" to="Level009" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level009/Area" to="Level009" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level010" to="." method="_on_Level_click"]
[connection signal="hover" from="Level010" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level010/Area" to="Level010" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level010/Area" to="Level010" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level010/Area" to="Level010" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level011" to="." method="_on_Level_click"]
[connection signal="hover" from="Level011" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level011/Area" to="Level011" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level011/Area" to="Level011" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level011/Area" to="Level011" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level012" to="." method="_on_Level_click"]
[connection signal="hover" from="Level012" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level012/Area" to="Level012" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level012/Area" to="Level012" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level012/Area" to="Level012" method="_on_Area_mouse_exited"]
[connection signal="click" from="Level013" to="." method="_on_Level_click"]
[connection signal="hover" from="Level013" to="." method="_on_Level_hover"]
[connection signal="input_event" from="Level013/Area" to="Level013" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Level013/Area" to="Level013" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Level013/Area" to="Level013" method="_on_Area_mouse_exited"]
